Cambio en el estilo del botón de inserción

--- a/src/app/components/music/music.component.html
+++ b/src/app/components/music/music.component.html
@@ -1,6 +1,6 @@
 <div class="page-container flex-column w-100 p-5">
     <h3>Mi lista de música</h3>
-    <div class="w-100 d-flex flex-row-reverse flex-xxl-column-reverse mt-2">
+    <div class="w-100 d-flex flex-row-reverse mt-2">
         <div
             class="d-flex justify-content-center align-items-center button-secundary"
             style="width: 240px; height: 70px;"
